# pna-gui

./: .gitignore  .prettierignore  README.md  SECURITY.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  playwright-ct.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  wdio.conf.ts
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml
playwright/: index.html  index.ts
scripts/: build-tauri-e2e.mjs  verify-release-boundary.mjs  verify-state-matrix.mjs
src/: App.css  App.module.css  App.tsx  index.html  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.e2e.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/examples/: generate_e2e_fixture.rs
src-tauri/icons/: icon.icns
src-tauri/src/: comparison.rs  jobs.rs  lib.rs  main.rs  operations.rs  reader.rs  reports.rs  utils.rs  verification.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: Button.module.css  Button.tsx  Dialog.module.css  Dialog.tsx  FileList.module.css  FileList.tsx  ProcessingIcon.module.css  ProcessingIcon.tsx  Uncontrolable.module.css  Uncontrolable.tsx
src/features/: i18n.tsx  singleFlight.ts
src/features/archive/: ArchiveTreeRow.module.css  ArchiveTreeRow.tsx  api.ts  presentation.ts  types.ts
src/features/comparison/: ComparisonView.module.css  ComparisonView.tsx  api.ts
src/features/jobs/: JobDrawer.module.css  JobDrawer.tsx  api.ts
src/features/verification/: VerificationDialog.module.css  VerificationDialog.tsx  VerificationResultsDialog.module.css  VerificationResultsDialog.tsx  api.ts
src/tabs/: Create.module.css  Create.tsx  Extract.module.css  Extract.tsx  index.ts
src/testing/: e2e-bridge.ts  e2e-wdio-bridge.ts
src/utils/fs/: index.ts
tests/: setup.ts
tests/browser/: archive-tree-row.spec.tsx  comparison-setup.spec.tsx  verification-results.spec.tsx
tests/component/: App.test.tsx  ComparisonView.test.tsx  Create.test.tsx  JobDrawer.test.tsx  VerificationDialog.test.tsx
tests/e2e/: archive-browser.spec.ts
tests/resources/: feature-state-matrix.tsv
tests/unit/: architecture.test.ts  archive-api.test.ts  archive-presentation.test.ts  comparison-api.test.ts  fs.test.ts  i18n.test.ts  job-api.test.ts  single-flight.test.ts  state-matrix-verifier.test.ts  verification-report-api.test.ts
