[package]
name = "pna-gui"
version = "0.0.9"
description = "Portable-Network-Archive GUI"
authors = ["Portable-Network-Archive Developers"]
license = "MIT"
repository = "https://github.com/Portable-Network-Archive/pna-gui"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6.2", features = [ "macos-private-api", "fs-all", "path-all", "updater", "window-all", "dialog-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libpna = "0.11.1"
open = "5.1.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
