[package]
name = "pna-gui"
version = "0.1.0"
description = "Portable-Network-Archive GUI"
authors = ["Portable-Network-Archive Developers"]
license = "MIT"
repository = "https://github.com/Portable-Network-Archive/pna-gui"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon", "macos-private-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libpna = "0.21.3"
open = "5.3.2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"
tauri-plugin-updater = "2"

# https://github.com/tauri-apps/tauri/issues/11496#issuecomment-2444638417
[profile.dev.package.objc2]
debug-assertions = false
