[package]
name = "pna-gui"
version = "0.1.4"
description = "Portable-Network-Archive GUI"
authors = ["Portable-Network-Archive Developers"]
license = "MIT"
repository = "https://github.com/Portable-Network-Archive/pna-gui"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libpna = "0.35.0"
open = "5.3.5"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-wdio = { version = "1.2.0", optional = true }
tauri-plugin-wdio-webdriver = { version = "1.2.0", optional = true }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
tauri-e2e = ["dep:tauri-plugin-wdio", "dep:tauri-plugin-wdio-webdriver"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"
tauri-plugin-updater = "2"

[dev-dependencies]
tempfile = "3"

[[example]]
name = "generate_e2e_fixture"
required-features = ["tauri-e2e"]

# https://github.com/tauri-apps/tauri/issues/11496#issuecomment-2444638417
[profile.dev.package.objc2]
debug-assertions = false
